fixed page overflow due to hyena

--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ iframe {
 }
 
 #hyena {
-    width: 5%;
+    width: 4%;
     position: absolute;
     right: 40px;
     scale: 10;
